src/Dependencies/libtase2-2.3.0/src/inc/tase2_model.h

typedef struct sTase2_Domain* Tase2_Domain;
/**
 * \brief Abstract type representing data points in the server data model
 *
 * Includes indication points \ref Tase2_IndicationPoint, protection equipment points \ref Tase2_ProtectionEquipment
 * and control points (devices) \ref Tase2_ControlPoint
 */
typedef struct sTase2_DataPoint* Tase2_DataPoint;
/**
 * \brief Representation of indication points in the server data model
 */
typedef struct sTase2_IndicationPoint* Tase2_IndicationPoint;
/**
 * \brief Representation of protection equipment in the server data model
 */
typedef struct sTase2_ProtectionEquipment* Tase2_ProtectionEquipment;
/**
 * \brief Represents a data set transfer set (DSTS) in the server
 */
typedef struct sTase2_DSTransferSet* Tase2_DSTransferSet;
/**
 * \brief Representation of a data set in the server data model
 */
typedef struct sTase2_DataSet* Tase2_DataSet;
typedef enum {
    TASE2_DEVICE_CLASS_SBO = 0,
    TASE2_DEVICE_CLASS_DIRECT = 1
} Tase2_DeviceClass;
typedef enum {
    TASE2_CONTROL_TYPE_COMMAND = 0,
    TASE2_CONTROL_TYPE_SETPOINT_REAL = 1,
    TASE2_CONTROL_TYPE_SETPOINT_DESCRETE = 2
} Tase2_ControlPointType;
typedef struct sTase2_ControlPoint* Tase2_ControlPoint;
/**
 * \brief Set the bilateral table (BLT) id of the domain
 *
 * NOTE: a domain is related to a specific bilateral table that is an agreement between client
 * and server on what data is accessible by the client. Usually a (server) domain is dedicated to a specific
 * other control center (client).
 *
 * \param id the BLT ID
 */
TASE2_API void
Tase2_Domain_setBilateralTableId(Tase2_Domain self, const char* id);
/**
 * \brief Create a new data point of type indication point
 *
 * NOTE: An indication point represents measurement or status data. There are some combinations that
 * don't result in valid types. The type StateQ is not required (because State already supports quality
 * information) and should not be used (also it is not accepted by some third-party implementations).
 *
 * \param name the name of the data point
 * \param type the type of the indication point
 * \param qualityClass defines if a quality flag is available
 * \param timeStampClass defines if and what kind of time stamp is available
 * \param hasCOV has a COV counter
 * \param readOnly true when indication point is read-only, false when read-write.
 *
 * \return the new indication point instance
 *
 * Allowed parameter combinations are:
 *
 * Resulting type (specification) | type | qualityClass | timeStampClass | hasCOV
 * --------------------------|------|--------------|----------------|--------
 * Data_State | STATE | NO_QUALITY | NO_TIMESTAMP | false
 * Data_Discrete | DISCRETE  | NO_QUALITY | NO_TIMESTAMP | false
 * Data_Real | REAL | NO_QUALITY | NO_TIMESTAMP | false
 * Data_StateSupplemental | STATE_SUPPLEMENTAL | NO_QUALITY | NO_TIMESTAMP | false
 * Data_RealQ | REAL | QUALITY | NO_TIMESTAMP | false
 * Data_DiscreteQ | DISCRETE | QUALITY | NO_TIMESTAMP | false
 * Data_StateSupplementalQ | STATE_SUPPLEMENTAL | QUALITY | NO_TIMESTAMP | false
 * Data_RealQTimeTag | REAL | QUALITY | TIMESTAMP | false
 * Data_StateQTimeTag | STATE | QUALITY | TIMESTAMP | false
 * Data_DiscreteQTimeTag | DISCRETE | QUALITY | TIMESTAMP | false
 * Data_StateSupplementalQTimeTag | STATE_SUPPLEMENTAL | QUALITY | TIMESTAMP | false
 * Data_RealExtended | REAL | QUALITY | TIMESTAMP | true
 * Data_StateExtended | STATE | QUALITY | TIMESTAMP | true
 * Data_DiscreteExtended | STATE | QUALITY | TIMESTAMP | true
 * Data_StateSupplementalExtended | STATE_SUPPLEMENTAL | QUALITY | TIMESTAMP | true
 * Data_RealQTimeTagExtended | REAL | QUALITY | TIMESTAMP_EXTENDED | false
 * Data_StateQTimeTagExtended | STATE | QUALITY | TIMESTAMP_EXTENDED | false
 * Data_DiscreteQTimeTagExtended | DISCRETE | QUALITY | TIMESTAMP_EXTENDED | false
 * Data_StateSupplementalQTimeTagExtended | STATE_SUPPLEMENTAL | QUALITY | TIMESTAMP_EXTENDED | false
 *
 */
TASE2_API Tase2_IndicationPoint
Tase2_Domain_addIndicationPoint(Tase2_Domain self, const char* name, Tase2_IndicationPointType type,
        Tase2_QualityClass qualityClass, Tase2_TimeStampClass timeStampClass, bool hasCOV, bool readOnly);
/**
 * \brief Create a new data point of type control point (device)
 *
 * NOTE: A control point (device) is used to control outputs or set points.
 *
 * \param deviceName name of the control point
 * \param pointType type of the control point (one of COMMAND, SETPOINT_REAL, SETPOINT_DISCRETE)
 * \param deviceClass the device class (one of TASE2_DEVICE_CLASS_SBO or TASE2_DEVICE_CLASS_DIRECT)
 * \param hasTag define if the device has a tag (a tag is a restriction that prohibits specific usage of the device)
 * \param checkBackId Set the check back ID for SBO.
 *
 * \return the new control point instance
 */
TASE2_API Tase2_ControlPoint
Tase2_Domain_addControlPoint(Tase2_Domain self, const char* deviceName, Tase2_ControlPointType pointType, Tase2_DeviceClass deviceClass, bool hasTag, int16_t checkBackId);
/**
 * \brief Create a new data point of type protection equipment
 *
 * \param equipmentName the name of the data point
 * \param isPacked specify if packed type is used
 *
 * \return the new protection equipment instance
 */
TASE2_API Tase2_ProtectionEquipment
Tase2_Domain_addProtectionEquipment(Tase2_Domain self, const char* equipmentName, bool isPacked);
/**
 * \brief Add a new data set transfer set (DSTS) to a domain
 *
 * \note Cannot be used with VCC pseudo-domain because transfer set are not allowed in VCC scope
 *
 * \param self the domain instance
 * \param name the name of the DSTS
 *
 * \return the new DSTS instance
 */
TASE2_API Tase2_DSTransferSet
Tase2_Domain_addDSTransferSet(Tase2_Domain self, const char* name);
/**
 * \brief Add a new data set to the domain or VCC pseudo-domain.
 *
 * A data set is a group of VCC or ICC scope variables.
 *
 * \param self the domain instance or VCC pseudo domain (see \ref Tase2_DataModel_getVCC)
 * \param name the name of the new data set
 *
 * \return the new data set instance
 */
TASE2_API Tase2_DataSet
Tase2_Domain_addDataSet(Tase2_Domain self, const char* name);
/**
 * \brief Get the data point (indication point, device, or protection equipment) with the given name.
 *
 * \param self the domain instance or VCC pseudo domain (see \ref Tase2_DataModel_getVCC)
 * \param name the name of the data point
 *
 * \return the data point instance or NULL if the data point doesn't exist.
 */
TASE2_API Tase2_DataPoint
Tase2_Domain_getDataPoint(Tase2_Domain self, const char* pointName);
/**
 * \brief Add an information message object to a domain of VCC scope
 *
 * \param self the domain instance or VCC pseudo domain (see \ref Tase2_DataModel_getVCC)
 * \param maxSize maximum size of the information message buffer
 */
TASE2_API void
Tase2_Domain_addInformationMessageObject(Tase2_Domain self, int maxSize);